--- a/forms/start_window_challenger.ui
+++ b/forms/start_window_challenger.ui
@@ -47,6 +47,16 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="delete_one">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="text">
+         <string>-</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
