--- a/forms/days_challenger.ui
+++ b/forms/days_challenger.ui
@@ -57,6 +57,13 @@
          </spacer>
         </item>
         <item>
+         <widget class="QPushButton" name="self_close">
+          <property name="text">
+           <string>Cancel</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QPushButton" name="pushButton">
           <property name="text">
            <string>Save</string>
